[package]
authors = ["Maksym Vorobiov <maxim.vorobjov@gmail.com>"]
name = "poloniex"
version = "0.1.0"
edition = "2018"

[dependencies]
tungstenite = "0.9"
tokio-tungstenite = { git="https://github.com/dbcfd/tokio-tungstenite", branch="tokio2" }
tokio = "0.2.0-alpha.6"
url = "2.1"
futures = "0.3"
json = "0.12"
time = "0.1"
serde = { version = "1.0", features = ["derive"] }